apps/nextcloud/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cloud.ryandev.ru`)
      kind: Rule
      services:
        - name: nextcloud
          port: 80
  tls:
    secretName: cloud-ryandev-ru-tls
